--- a/jaar1.html
+++ b/jaar1.html
@@ -11,7 +11,7 @@
 	<body>
 
 		<header>
-			<div><a href="rapport.html"><img src="images/logo.png" alt="logo" height="300" /><a/></div>
+			<div><a href="index.html"><img src="images/logo.png" alt="logo" height="300" /><a/></div>
 			<nav> 
 					<ul>
 
