--- a/jaar2.html
+++ b/jaar2.html
@@ -124,8 +124,8 @@
 			<tr>
 				<td>UE</td> 
 				<td>User Experience</td>
-				<td align="right"></td>
-				<td align="right">(3)</td>
+				<td align="right">7,5</td>
+				<td align="right">3</td>
 			</tr>
 		</table>
 
@@ -325,22 +325,15 @@
 			</tr>
 
 			<tr>
-				<td rowspan="2">User Experience</td>
+				<td >User Experience</td>
 				<td>Werkstuk</td>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td align="right">100%</td>
-				<td align="right"></td>
-			</tr>
-			<tr>
-				<td>Schriftelijk</td>
-				<td></td>
+				<td>7,5</td>
 				<td></td>
 				<td></td>
 				<td align="right">100%</td>
-				<td align="right"></td>
+				<td align="right">7,5</td>
 			</tr>
+			
 		</table>
 
 		<p>*<b class="over">Cijfer</b> vervallen cijfer door herkansing.</p>
