--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<p>Ik doe Communicatie en Multimedia Design op de Haagse Hogeschool. Dit heeft onder andere te maken met communicatie, marketing, programmeren en design. Media blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen. </p>
 
 				<h3>Vind je je studie leuk?</h3>
-					<p>Ja, ik vind het zeker een leuke opleiding. Het lijkt me een leuke, maar een uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stageperiodes. In deze periodes kan ik ontdekken welke functie van het vak ik mij wil richten.</p>
+					<p>Ja, ik vind het zeker een leuke opleiding. Het lijkt me een leuke en uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stageperiodes. In deze periodes kan ik ontdekken welke functie van het vak ik mij wil richten.</p>
 
 				<h3>Waar kan ik meer van je werk zien?<h3>
 					<p>Momenteel ben ik bezig met een eigen website die gebruikt kan worden voor sollicitaties, zodra deze klaar is kun je allerlei projecten zien.</p>
@@ -43,7 +43,7 @@
 					<p>Voor jaar 1 heb ik aan het eind van deze periode nog 3 toetsen te halen.<br >
 						Dit zijn: Nederlands toets, Schriftlijke toets Media in the Society en Project D.<br ><br>
 
-						Jaar 2 is een ander verhaal. De vakken in het rood, die ik niet heb behaald, mag ik volgens jaar halen.<br ><br >
+						Jaar 2 is een ander verhaal. De vakken in het rood, die ik niet heb behaald, mag ik volgend jaar halen.<br ><br >
 
 						Zolang ik dit jaar mijn Propedeuse haal (met Nederlands als eventuele uitzondering), kan ik gewoon verder met mijn studie.</p>
 
