--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<p>Ja, ik vind het zeker een leuke opleiding. Het lijkt me een leuke en uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stageperiodes. In deze periodes kan ik ontdekken welke functie van het vak ik mij wil richten.</p>
 
 				<h3>Waar kan ik meer van je werk zien?<h3>
-					<p>Momenteel ben ik bezig met een eigen website die gebruikt kan worden voor sollicitaties, zodra deze klaar is kun je allerlei projecten zien.</p>
+					<p>Momenteel ben ik bezig met een eigen portfolio website die gebruikt kan worden voor sollicitaties. Het is nog 'a work in progress'. De link: <a href="https://shanicekloppers.github.io/Portfolio/"target="_blank">Portfolio</a>.</p>
 
 				<h3>Hoe sta je ervoor?</h3>
 					<p>Voor jaar 1 heb ik aan het eind van deze periode nog 3 toetsen te halen.<br >
