--- a/jaar2.html
+++ b/jaar2.html
@@ -11,7 +11,7 @@
 	<body>
 
 		<header>
-			<div><a href="index.html"><img src="images/logo.png" alt="logo" height="300" /><a/></div>
+			<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo" height="300"/><a/></div>
 			<nav> 
 					<ul>
 
@@ -281,8 +281,8 @@
 							</tr>
 							<tr>
 								<td>Eindtoets</td>
+								<td class="over">NVD</td>
 								<td>7,5</td>
-								<td></td>
 								<td></td>
 								<td align="right">100%</td>
 								<td>7,5</td>
