--- a/jaar1.html
+++ b/jaar1.html
@@ -118,8 +118,8 @@
 				<td rowspan="4">D</td>
 				<td>DOP</td>
 				<td>Design for Online Presence</td> 
-				<td class="onvoldoende" align="right">4,5</td>
-				<td class="onvoldoende" align="right">(6)</td>
+				<td align="right">6,5</td>
+				<td align="right">6</td>
 			</tr>
 			<tr>
 				<td>CR</td> 
@@ -400,10 +400,10 @@
 			<tr>
 				<td>Assessment</td>
 				<td class="over">3,7</td>
-				<td class="onvoldoende">4,5</td>
-				<td></td>
+				<td class="over">4,5</td>
+				<td>6,5</td>
 				<td align="right">100%</td>
-				<td align="right" class="onvoldoende">4,5</td>
+				<td align="right">6,5</td>
 			</tr>
 
 
