--- a/jaar2.html
+++ b/jaar2.html
@@ -102,7 +102,7 @@
 							<td>M</td>
 							<td>Marketing</td> 
 							<td align="right">7,5</td>
-							<td class="onvoldoende" align="right">(3)</td>
+							<td align="right">3</td>
 						</tr>
 
 							<tr>
@@ -273,11 +273,11 @@
 							<tr>
 								<td rowspan="2">Marketing</td>
 								<td>Verslag</td>
-								<td class="onvoldoende">NV</td>
-								<td></td>
+								<td class="over">NV</td>
+								<td>V</td>
 								<td></td>
 								<td align="right">V/O</td>
-								<td class="onvoldoende" align="right">NV</td>
+								<td align="right">V</td>
 							</tr>
 							<tr>
 								<td>Eindtoets</td>
