--- a/jaar1.html
+++ b/jaar1.html
@@ -135,9 +135,9 @@
 						</tr>
 						<tr>
 							<td>P</td>
-							<td>Portfolio</td> 
-							<td class="onvoldoende" align="right">O</td>
-							<td class="onvoldoende" align="right">(3)</td>
+							<td>P-Portfolio</td> 
+							<td align="right">V</td>
+							<td align="right">3</td>
 						</tr>
 					</table>
 
@@ -465,10 +465,10 @@
 						<tr>
 							<td>Nederlands</td>
 							<td class="over">O</td>
-							<td class="onvoldoende">O</td>
-							<td></td>
+							<td class="over">O</td>
+							<td>V</td>
 							<td align="right">O/V</td>
-							<td align="right" class="onvoldoende">O</td>
+							<td align="right">V</td>
 						</tr>
 					</table>
 
