--- a/jaar2.html
+++ b/jaar2.html
@@ -115,8 +115,8 @@
 							<tr>
 								<td>HCI</td> 
 								<td>HCI Technologies</td>
-								<td align="right"></td>
-								<td align="right">(6)</td>
+								<td align="right">6,0</td>
+								<td align="right">6</td>
 							</tr>
 							<tr>
 								<td>UE</td> 
@@ -313,11 +313,11 @@
 					<tr>
 						<td>HCI Technologies</td>
 						<td>Werkstuk</td>
-						<td></td>
+						<td>6,0</td>
 						<td></td>
 						<td></td>
 						<td align="right">100%</td>
-						<td align="right"></td>
+						<td align="right">6,0</td>
 					</tr>
 
 						<tr>
