--- a/index.html
+++ b/index.html
@@ -36,19 +36,9 @@
 				<h3>Vind je je studie leuk?</h3>
 					<p>Ja, ik vind het zeker een leuke opleiding. Het lijkt me een leuke en uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stageperiodes. In deze periodes kan ik ontdekken welke functie van het vak ik mij wil richten.</p>
 
-				<h3>Waar kan ik meer van je werk zien?<h3>
-					<p>Momenteel ben ik bezig met een eigen portfolio website die gebruikt kan worden voor sollicitaties. Het is nog 'a work in progress'. De link: <a href="https://shanicekloppers.github.io/Portfolio/"target="_blank">Portfolio</a>.</p>
-
 				<h3>Hoe sta je ervoor?</h3>
-					<p>Voor jaar 1 heb ik aan het eind van deze periode nog 3 toetsen te halen.<br >
-						Dit zijn: Nederlands toets, Schriftlijke toets Media in the Society en Project D.<br ><br>
-
-						Jaar 2 is een ander verhaal. De vakken in het rood, die ik niet heb behaald, mag ik volgend jaar halen.<br ><br >
-
-						Zolang ik dit jaar mijn Propedeuse haal (met Nederlands als eventuele uitzondering), kan ik gewoon verder met mijn studie.</p>
-
-				<h3>Wat is een Propedeuse?</h3>
-					<p>De Propedeuse is een soort tussentijdse certificaat voor het behalen van alle vakken uit het eerste jaar. Het eerste jaar is wat strenger dan andere jaren. Indien ik achterstand heb met vakken van jaar 2 of jaar 3, kan ik er een jaar bijplakken. In dit geval doe ik mijn studie dan niet in 4, maar in 5 jaar. (Mijn voorkeur gaat natuurlijk uit naar zo snel mogelijk.</p>
+					<p>Ik heb mijn Propedeuse gehaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar wat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook ooit behalen, maar is het geen probleem als ik onderdelen hiervan niet in één keer haal.</p>
+						<p>Het derde jaar, het komende jaar, kan ik stage gaan lopen.</p>
 
 	</body>
 </html>
