--- a/jaar2.html
+++ b/jaar2.html
@@ -11,7 +11,7 @@
 	<body>
 
 		<header>
-			<a class="logo" href="index.html"><img src="images/logo.png" alt="logo" height="300"/><a/>
+			<div><a href="index.html"><img src="images/logo.png" alt="logo" height="300" /><a/></div>
 			<nav> 
 					<ul>
 
