--- a/jaar2.html
+++ b/jaar2.html
@@ -3,7 +3,7 @@
 
 	<head>
   		<meta charset="UTF-8">
-  		<meta name="viewport" content="width=device-width, initial-scale=1">
+  		<meta name="viewport" content="width=device-width, user-scalable=0;">
   		<title>Jaar 2</title>
 		<link type ="text/css" rel="stylesheet" href="css/styles.css">
 	</head>
