--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
 			</nav>
 		</header>
 			<h1>Welkom</h1>
-				<p>Welkom bij mijn Online Rapport.<br >
-				Klik hierboven om de cijfers te zien van jaar 1 of van jaar 2.</p>
+				<p>Welkom bij mijn Online Rapport.</p>
 
 			<h2>Veelgestelde vragen</h2>
 
 				<h3>Wat houdt je studie in?</h3>
-					<p>Ik doe Communicatie en Multimedia Design op de Haagse Hogeschool. Dit heeft onder andere te maken met communicatie, marketing, programmeren en design. Media blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen. </p>
+					<p>Ik doe Communicatie en Multimedia Design op de Haagse Hogeschool. Dit heeft onder andere te maken met communicatie, marketing, programmeren en design. De studie draait om Webdesign. Internet blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen. </p>
 
-				<h3>Vind je je studie leuk?</h3>
-					<p>Ja, ik vind het zeker een leuke opleiding. Het lijkt me een leuke en uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stageperiodes. In deze periodes kan ik ontdekken welke functie van het vak ik mij wil richten.</p>
+				<h3>Wat vind je van je studie?</h3>
+					<p>Ik vind het een hele leuke, interessante opleiding. Het lijkt me een uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stages. </p>
 
 				<h3>Hoe sta je ervoor?</h3>
-					<p>Ik heb mijn Propedeuse gehaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar wat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook ooit behalen, maar is het geen probleem als ik onderdelen hiervan niet in één keer haal.</p>
-						<p>Het derde jaar, het komende jaar, kan ik stage gaan lopen.</p>
+					<p>Ik heb mijn Propedeuse gehaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter. Zonder je Propedeuse zou je bijvoorbeeld geen stage mogen lopen.</p>
+						<p>In het derde jaar, het huidige jaar, kan ik stage gaan lopen. In een stage wil ik graag ervaring opdoen in het vak. Zo, dat ik kan ontdekken welke richting ik het beste op kan gaan. Mijn interesse binnen het vak gaat uit naar Visueel Design (werken met onder andere Photoshop) en Front-End Developer (Coderen van een website).</p>
 
 	</body>
 </html>
