--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 					  <li>
 					  	<a href="jaar2.html">Jaar 2</a>
 					  </li>
+					  <li>
+					  	<a href="jaar3.html">Jaar 3</a>
+					  </li>
 					</ul>
 			</nav>
 		</header>
@@ -33,11 +36,12 @@
 					<p>Ik doe Communicatie en Multimedia Design op de Haagse Hogeschool. Dit heeft onder andere te maken met communicatie, marketing, programmeren en design. De studie draait om Webdesign. Internet blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen. </p>
 
 				<h3>Wat vind je van je studie?</h3>
-					<p>Ik vind het een hele leuke, interessante opleiding. Het lijkt me een uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stages. </p>
+					<p>Ik vind het een hele leuke, interessante opleiding. Het lijkt me een uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stages. In deze stages hoop ik mijzelf te kunnen ontwikkelen.</p>
 
 				<h3>Hoe sta je ervoor?</h3>
 					<p>Ik heb mijn Propedeuse gehaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter. Zonder je Propedeuse zou je bijvoorbeeld geen stage mogen lopen.</p>
-						<p>In het derde jaar, het huidige jaar, kan ik stage gaan lopen. In een stage wil ik graag ervaring opdoen in het vak. Zo, dat ik kan ontdekken welke richting ik het beste op kan gaan. Mijn interesse binnen het vak gaat uit naar Visueel Design (werken met onder andere Photoshop) en Front-End Developer (Coderen van een website).</p>
+
+						<p>In het derde jaar, het huidige jaar, kan ik stage gaan lopen. In een stage wil ik graag zo veel mogelijk ervaring opdoen binnen het vak. Zo, dat ik kan ontdekken welke richting ik het beste op kan gaan. Mijn interesse binnen het vak gaat uit naar Visueel Design (werken met onder andere Photoshop) en Front-End Developer (Coderen van een website).</p>
 
 	</body>
 </html>
