--- a/jaar2.html
+++ b/jaar2.html
@@ -21,6 +21,9 @@
 					  <li>
 					  	<a href="jaar2.html">Jaar 2</a>
 					  </li>
+					  <li>
+					  	<a href="jaar3.html">Jaar 3</a>
+					  </li>
 					</ul>
 			</nav>
 		</header>
@@ -55,8 +58,8 @@
 				<tr>
 					<td>IxD1</td> 
 					<td>IxD and Technology</td>
-					<td class="onvoldoende" align="right">O</td>
-					<td class="onvoldoende" align="right">(3)</td>
+					<td align="right">6,0</td>
+					<td align="right">3</td>
 				</tr>
 
 					<tr>
@@ -178,11 +181,11 @@
 							<tr>
 								<td>IxD and Technology</td>
 								<td>Website</td>
-								<td class="onvoldoende">O</td>
-								<td></td>
+								<td class="over" >O</td>
+								<td>6,0</td>
 								<td></td>
 								<td align="right">100%</td>
-								<td class="onvoldoende" align="right">O</td>
+								<td align="right">6,0</td>
 							</tr>
 
 		</table>
