--- a/jaar1.html
+++ b/jaar1.html
@@ -21,6 +21,9 @@
 					  <li>
 					  	<a href="jaar2.html">Jaar 2</a>
 					  </li>
+					  <li>
+					  	<a href="jaar3.html">Jaar 3</a>
+					  </li>
 					</ul>
 			</nav>
 		</header>
