--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<h3>Hoe sta je ervoor?</h3>
 					<p>Ik heb mijn Propedeuse gehaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter. Zonder je Propedeuse zou je bijvoorbeeld geen stage mogen lopen.</p>
 
-						<p>In het derde jaar, het huidige jaar, kan ik stage gaan lopen. In een stage wil ik graag zo veel mogelijk ervaring opdoen binnen het vak. Zo, dat ik kan ontdekken welke richting ik het beste op kan gaan. Mijn interesse binnen het vak gaat uit naar Visueel Design (werken met onder andere Photoshop) en Front-End Developer (Coderen van een website).</p>
+						<p>Ik ben in mijn huidige derdejaar net begonnen met een stage bij <a href="https://evalytics.nl/">Evalytics</a>. Deze stage zit in Leiden. Deze stage volg ik tot begin juli. Met deze stage hoop ik mijn kunnen te organiseren en te zien hoe het is om binnen het vak te werken.</p>
 
 	</body>
 </html>
