--- a/jaar3.html
+++ b/jaar3.html
@@ -43,11 +43,133 @@
 				</tr>
 
 					<tr>
-						<td rowspan="1">Minor Fotografie</td>
-						<td>Assessment</td> 
-						<td align="right"></td>
-						<td align="right">(15)</td>
+						<td rowspan="2">Minor Fotografie</td>
+						<td>Praktijk</td> 
+						<td align="right">7,2</td>
+						<td align="right" rowspan="2">15</td>
 					</tr>
+
+						<tr>
+							<td>Theorie</td> 
+							<td align="right">6,8</td>
+							
+						</tr>
+
+							<tr>
+								<td rowspan="1">Stage</td>
+								<td>Rapport</td> 
+								<td align="right"></td>
+								<td align="right">(30)</td>
+							</tr>
+
+		</table>
+
+		<h2>Minor Design for User Experience</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Les</th>
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td rowspan="1">Praktijk</td>
+					<td>Assessment</td>
+					<td></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right"></td>
+				</tr>
+		</table>
+
+		<h2>Minor Fotografie</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Les</th>
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td rowspan="5">Praktijk</td>
+					<td>Texture & Rythm</td>
+					<td>6,5</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right">6,5</td>
+				</tr>
+
+					<tr>
+						<td>Styling</td>
+						<td>7,0</td>
+						<td></td>
+						<td></td>
+						<td align="right">100%</td>
+						<td align="right">7,0</td>
+					</tr>
+
+						<tr>
+							<td>Light</td>
+							<td>8,0</td>
+							<td></td>
+							<td></td>
+							<td align="right">100%</td>
+							<td align="right">8,0</td>
+						</tr>
+
+							<tr>
+								<td>Time</td>
+								<td>7,0</td>
+								<td></td>
+								<td></td>
+								<td align="right">100%</td>
+								<td align="right">7,0</td>
+							</tr>
+
+								<tr>
+									<td>Fascination</td>
+									<td>7,5</td>
+									<td></td>
+									<td></td>
+									<td align="right">100%</td>
+									<td align="right">7,5</td>
+								</tr>
+
+			<tr>
+					<td rowspan="3">Theorie</td>
+					<td>Museum</td>
+					<td>6,0</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right">6,0</td>
+				</tr>
+
+					<tr>
+						<td>Fascination</td>
+						<td>7,0</td>
+						<td></td>
+						<td></td>
+						<td align="right">100%</td>
+						<td align="right">7,0</td>
+					</tr>
+
+						<tr>
+							<td>Assessment</td>
+							<td>7,5</td>
+							<td></td>
+							<td></td>
+							<td align="right">100%</td>
+							<td align="right">7,5</td>
+						</tr>
 
 		</table>
 
