--- a/index.html
+++ b/index.html
@@ -27,21 +27,16 @@
 					</ul>
 			</nav>
 		</header>
-			<h1>Welkom</h1>
-				<p>Welkom bij mijn Online Rapport.</p>
+			<h1>Hallo! Ik ben Shanice Kloppers.</h1>
+				<h2>Welkom bij mijn Online Rapport.</h2>
 
-			<h2>Veelgestelde vragen</h2>
+					<p>Momenteel volg ik de studie Communicatie en Multimedia Design aan de Haagse Hogeschool. Deze studie heeft onder andere te maken met communicatie, marketing, programmeren en vooral design. Kort gezegd gaat deze studie over Webdesign. Internet blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen.</p>
 
-				<h3>Wat houdt je studie in?</h3>
-					<p>Ik doe Communicatie en Multimedia Design op de Haagse Hogeschool. Dit heeft onder andere te maken met communicatie, marketing, programmeren en design. De studie draait om Webdesign. Internet blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen. </p>
+					<h3>Hoe ik ervoor sta</h3>
+					<p>Ik heb mijn Propedeuse vorig jaar behaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter. Zonder je Propedeuse zou je bijvoorbeeld geen stage mogen lopen.</p>
 
-				<h3>Wat vind je van je studie?</h3>
-					<p>Ik vind het een hele leuke, interessante opleiding. Het lijkt me een uitdagende baan. Ondanks dat ik het spannend vind, kijk ik uit naar de stages. In deze stages hoop ik mijzelf te kunnen ontwikkelen.</p>
-
-				<h3>Hoe sta je ervoor?</h3>
-					<p>Ik heb mijn Propedeuse gehaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter. Zonder je Propedeuse zou je bijvoorbeeld geen stage mogen lopen.</p>
-
-						<p>Ik ben in mijn huidige derdejaar net begonnen met een stage bij <a href="https://evalytics.nl/">Evalytics</a>. Deze stage zit in Leiden. Deze stage volg ik tot begin juli. Met deze stage hoop ik mijn kunnen te organiseren en te zien hoe het is om binnen het vak te werken.</p>
+					<h3>Wat ik nu doe</h3>
+					<p>Ik vind CMD een hele leuke, interessante opleiding. Momenteel loop ik stage bij <a href="https://evalytics.nl/">Evalytics</a> te Leiden en mag ik de loopbaan beproeven. Evalytics is een heel leuk, leerzaam bedrijf. Inderdaad is deze stage wel ver weg van huis en reis ik iedere dag 3 tot 4 uur in totaal. Ik mag deze stage vanaf februari tot juli belopen. Door deze leerzame stage te doen hoop ik mijn kunnen te ontdekken binnen het vak CMD.</p>
 
 	</body>
 </html>
