--- a/jaar3.html
+++ b/jaar3.html
@@ -38,8 +38,8 @@
 				<tr>
 					<td rowspan="1">Minor Design for User Experience</td>
 					<td>Assessment</td>
-					<td align="right"></td>
-					<td align="right">15</td>
+					<td align="right">X</td>
+					<td align="right" class="onvoldoende">15</td>
 				</tr>
 
 					<tr>
@@ -78,11 +78,11 @@
 				<tr>
 					<td rowspan="1">Praktijk</td>
 					<td>Assessment</td>
-					<td></td>
-					<td width="30"></td>
+					<td class="onvoldoende">O</td>
+					<td width="30" class="onvoldoende">O</td>
 					<td width="30"></td>
 					<td align="right">100%</td>
-					<td align="right"></td>
+					<td align="right">X</td>
 				</tr>
 		</table>
 
