--- a/jaar2.html
+++ b/jaar2.html
@@ -67,19 +67,17 @@
 						<td>M1</td> 
 						<td>Module 1</td>
 						<td align="right">5,7</td>
-						<td align="right">6</td>
+						<td rowspan="3" align="right">15</td>
 					</tr>
 					<tr>
 						<td>M2</td> 
 						<td>Module 2</td>
-						<td class="onvoldoende" align="right">5,4</td>
-						<td class="onvoldoende" align="right">(6)</td>
+						<td align="right">6,4</td>
 					</tr>
 					<tr>
 						<td>M3</td>
 						<td>Module 3</td>
 						<td align="right">6,0</td>
-						<td align="right">3</td>
 					</tr>
 
 						<tr>
@@ -215,10 +213,10 @@
 							<td>Module 2</td>
 							<td>Schriftelijk</td>
 							<td class="over">4,6</td>
-							<td class="onvoldoende">5,4</td>
-							<td></td>
+							<td class="over">5,4</td>
+							<td>6,4</td>
 							<td align="right">100%</td>
-							<td class="onvoldoende" align="right">O</td>
+							<td align="right">6,4</td>
 						</tr>
 
 							<tr>
