--- a/jaar2.html
+++ b/jaar2.html
@@ -96,8 +96,8 @@
 						<tr>
 							<td>IxD2</td> 
 							<td>IxD and Technology II</td>
-							<td class="onvoldoende" align="right">NV</td>
-							<td class="onvoldoende" align="right">(3)</td>
+							<td align="right">6,0</td>
+							<td align="right">3</td>
 						</tr>
 						<tr>
 							<td>M</td>
@@ -264,11 +264,11 @@
 						<tr>
 							<td rowspan="1">IxD and Technology II</td>
 							<td>Webiste</td>
-							<td class="onvoldoende">NV</td>
-							<td></td>
+							<td class="over">NV</td>
+							<td>6,0</td>
 							<td></td>
 							<td align="right">100%</td>
-							<td class="onvoldoende" align="right">NV</td>
+							<td align="right">6,0</td>
 						</tr>
 
 							<tr>
