--- a/jaar3.html
+++ b/jaar3.html
@@ -57,8 +57,8 @@
 							<tr>
 								<td rowspan="1">Stage</td>
 								<td>Rapport</td> 
-								<td align="right"></td>
-								<td align="right">(30)</td>
+								<td align="right">8,0</td>
+								<td align="right">30</td>
 							</tr>
 
 		</table>
@@ -171,6 +171,30 @@
 						</tr>
 
 		</table>
+
+		<h2>Stage Evalytics</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Les</th>
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td rowspan="1">Praktijk</td>
+					<td>Verslag</td>
+					<td width="30">8,0</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right">8,0</td>
+				</tr>
+		</table>
+
+		<br />
 
 		<p>*<b class="over">Cijfer</b> vervallen cijfer door herkansing.</p>
 		<p>*<b class="onvoldoende">Cijfer</b> onvoldoende.</p>
