--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p>Ik heb mijn Propedeuse vorig jaar behaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter. Zonder je Propedeuse zou je bijvoorbeeld geen stage mogen lopen.</p>
 
 					<h3>Wat ik nu doe</h3>
-					<p>Ik vind CMD een hele leuke, interessante opleiding. Momenteel loop ik stage bij <a href="https://evalytics.nl/" target="_blank">Evalytics</a> te Leiden en mag ik de loopbaan beproeven. Evalytics is een heel leuk, leerzaam bedrijf. Inderdaad is deze stage wel ver weg van huis en reis ik iedere dag 3 tot 4 uur in totaal. Ik mag deze stage vanaf februari tot juli belopen. Door deze leerzame stage te doen hoop ik mijn kunnen te ontdekken binnen het vak CMD.</p>
+					<p>Mijn derdejaarsstage bij <a href="https://evalytics.nl/" target="_blank">Evalytics</a> te Leiden heb ik afgerond met een 8,0. Deze zomervakantie is mijn laatste. Na deze zomervakantie ga ik mijn afstudeerjaar in.</p>
 
 	</body>
 </html>
