--- a/jaar3.html
+++ b/jaar3.html
@@ -59,7 +59,7 @@
 
 							<tr>
 								<td rowspan="1">Stage</td>
-								<td>Rapport</td> 
+								<td>Rapportage</td> 
 								<td align="right">8,0</td>
 								<td align="right">30</td>
 							</tr>
@@ -188,7 +188,7 @@
 
 				<tr>
 					<td rowspan="1">Praktijk</td>
-					<td>Verslag</td>
+					<td>Rapportage</td>
 					<td width="30">8,0</td>
 					<td width="30"></td>
 					<td width="30"></td>
