--- a/jaar4.html
+++ b/jaar4.html
@@ -31,135 +31,7 @@
 			</nav>
 		</header>
 
-		<table align="center" width="800">
-			<tr class="head">
-				<th width="350">Periode</th>
-				<th align="left" width="200">Les</th>
-				<th width="50">Cijfer</th>
-				<th>Studiepunten</th>
-			</tr>
-				<tr>
-					<td rowspan="1"></td>
-					<td></td>
-					<td align="right"></td>
-					<td align="right"></td>
-				</tr>
-
-					<tr>
-						<td rowspan="2"></td>
-						<td></td> 
-						<td align="right"></td>
-						<td align="right" rowspan="2"></td>
-					</tr>
-
-						<tr>
-							<td></td> 
-							<td align="right"></td>
-						</tr>
-
-							<tr>
-								<td rowspan="1"></td>
-								<td></td> 
-								<td align="right"></td>
-								<td align="right"></td>
-							</tr>
-
-		</table>
-
-		<h2></h2>
-
-		<table align="center" width="800">
-			<tr class="head">
-				<th align="left">Les</th>
-				<th align="left">Type</th> 
-				<th align="left" colspan="3">Cijfer</th>
-				<th>Percentage</th>
-				<th>Cijfer</th>
-			</tr>
-
-				<tr>
-					<td rowspan="1"></td>
-					<td></td>
-					<td class="onvoldoende"></td>
-					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right">100%</td>
-					<td align="right"></td>
-				</tr>
-		</table>
-
-		<h2></h2>
-
-		<table align="center" width="800">
-			<tr class="head">
-				<th align="left">Les</th>
-				<th align="left">Type</th> 
-				<th align="left" colspan="3">Cijfer</th>
-				<th>Percentage</th>
-				<th>Cijfer</th>
-			</tr>
-
-				<tr>
-					<td rowspan="5"></td>
-					<td></td>
-					<td></td>
-					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right">100%</td>
-					<td align="right"></td>
-				</tr>
-
-			<tr>
-					<td rowspan="3"></td>
-					<td></td>
-					<td></td>
-					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right">100%</td>
-					<td align="right"></td>
-				</tr>
-
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td align="right">100%</td>
-						<td align="right"></td>
-					</tr>
-
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td align="right">100%</td>
-							<td align="right"></td>
-						</tr>
-
-		</table>
-
-		<h2></h2>
-
-		<table align="center" width="800">
-			<tr class="head">
-				<th align="left">Les</th>
-				<th align="left">Type</th> 
-				<th align="left" colspan="3">Cijfer</th>
-				<th>Percentage</th>
-				<th>Cijfer</th>
-			</tr>
-
-				<tr>
-					<td rowspan="1"></td>
-					<td></td>
-					<td width="30"></td>
-					<td width="30"></td>
-					<td width="30"></td>
-					<td align="right">100%</td>
-					<td align="right"></td>
-				</tr>
-		</table>
+		<h2>Geen inhoud.</h2>
 
 		<br />
 
