--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 					<p>Momenteel volg ik de studie Communicatie en Multimedia Design aan de Haagse Hogeschool. Deze studie heeft onder andere te maken met communicatie, marketing, programmeren en vooral design. Kort gezegd gaat deze studie over Webdesign. Internet blijft altijd groeien en zal een baan zijn waar je blijft leren over nieuwe ontwikkelingen.</p>
 
 					<h3>Hoe ik ervoor sta</h3>
-					<p>Ik heb mijn Propedeuse vorig jaar behaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter. Zonder je Propedeuse zou je bijvoorbeeld geen stage mogen lopen.</p>
+					<p>Ik heb mijn Propedeuse behaald met een gemiddelde van 6,7. Het Propedeusejaar, het eerste jaar, is het jaar dat je moet behalen. De onderdelen in het tweede, derde en vierde jaar moet ik ook behalen, maar hier staat minder druk achter.</p>
 
 					<h3>Wat ik nu doe</h3>
-					<p>Mijn derdejaarsstage bij <a href="https://evalytics.nl/" target="_blank">Evalytics</a> te Leiden heb ik afgerond met een 8,0. Deze zomervakantie is mijn laatste. Na deze zomervakantie ga ik mijn afstudeerjaar in.</p>
+					<p>Momenteel zit ik in mijn laatste jaar. De eerste 5 maanden volg ik nog vakken. Hierna heb ik een minor en doe ik in te halen vakken voor 2,5 maand. Hierna ga ik een afstudeerstage lopen en zal waarschijnlijk in september 2020 afstuderen.</p>
 
 	</body>
 </html>
