--- a/jaar3.html
+++ b/jaar3.html
@@ -33,8 +33,8 @@
 
 		<table align="center" width="800">
 			<tr class="head">
-				<th width="350">Periode</th>
-				<th align="left" width="200">Les</th>
+				<th width="350" align="left">Course</th>
+				<th align="left" width="200">Type</th>
 				<th width="50">Cijfer</th>
 				<th>Studiepunten</th>
 			</tr>
