--- a/jaar4.html
+++ b/jaar4.html
@@ -31,7 +31,218 @@
 			</nav>
 		</header>
 
-		<h2>Geen inhoud.</h2>
+		<table align="center" width="800">
+			<tr class="head">
+				<th width="350" align="left">Course</th>
+				<th align="left" width="200">Type</th>
+				<th width="50">Cijfer</th>
+				<th>Studiepunten</th>
+			</tr>
+				<tr>
+					<td rowspan="1">Elective Courses: Animation</td>
+					<td>Project</td>
+					<td align="right">5,5</td>
+					<td align="right">3</td>
+				</tr>
+
+					<tr>
+						<td rowspan="2">Project 4: Autonomous Design</td>
+						<td>Portfolio</td> 
+						<td align="right"></td>
+						<td align="right" rowspan="2">(12)</td>
+					</tr>
+
+						<tr>
+							<td>Assessment</td> 
+							<td align="right"></td>
+						</tr>
+
+							<tr>
+								<td rowspan="1">Young Professionals</td>
+								<td>Assessment</td>
+								<td align="right"></td>
+								<td align="right">(3)</td>
+							</tr>
+
+								<tr>
+									<td rowspan="1">Project 5: Service Design</td>
+									<td>Rapportage</td> 
+									<td align="right"></td>
+									<td align="right">(9)</td>
+								</tr>
+
+									<tr>
+										<td rowspan="1">Personal Development</td>
+										<td>Essay</td> 
+										<td align="right"></td>
+										<td align="right">(3)</td>
+									</tr>
+
+										<tr>
+											<td rowspan="1">Minor</td>
+											<td></td> 
+											<td align="right"></td>
+											<td align="right">(15)</td>
+										</tr>
+
+		</table>
+
+		<h2>Elective Courses: Animation</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td rowspan="1">Assessment</td>
+					<td width="30">5,5</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right">5,5</td>
+				</tr>
+		</table>
+
+		<h2>Project 4: Autonomous Design</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td>Portfolio</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right"></td>
+					<td align="right"></td>
+				</tr>
+
+					<tr>
+						<td>Design Rationale</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td align="right"></td>
+						<td align="right"></td>
+					</tr>
+
+						<tr>
+							<td>Visual Summary</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td align="right"></td>
+							<td align="right"></td>
+						</tr>
+
+							<tr>
+								<td>Reflectie</td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td align="right"></td>
+								<td align="right"></td>
+							</tr>
+
+								<tr>
+									<td>Assessment</td>
+									<td></td>
+									<td></td>
+									<td></td>
+									<td align="right"></td>
+									<td align="right"></td>
+								</tr>
+
+		</table>
+
+		<h2>Young Professionals</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td>Assessment</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right"></td>
+				</tr>
+		</table>
+
+		<h2>Project 5: Service Design</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td>Rapportage</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right"></td>
+				</tr>
+		</table>
+
+		<h2>Personal Development</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td rowspan="1">Essay</td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right"></td>
+				</tr>
+		</table>
+
+		<h2>Minor</h2>
+
+		<table align="center" width="800">
+			<tr class="head">
+				<th align="left">Type</th> 
+				<th align="left" colspan="3">Cijfer</th>
+				<th>Percentage</th>
+				<th>Cijfer</th>
+			</tr>
+
+				<tr>
+					<td rowspan="1"></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td width="30"></td>
+					<td align="right">100%</td>
+					<td align="right"></td>
+				</tr>
+		</table>
 
 		<br />
 
