--- a/jaar4.html
+++ b/jaar4.html
@@ -62,8 +62,8 @@
 								<tr>
 									<td rowspan="1">Project 5: Service Design</td>
 									<td>Rapportage</td> 
-									<td align="right"></td>
-									<td align="right">(9)</td>
+									<td align="right">7,0</td>
+									<td align="right">9</td>
 								</tr>
 
 									<tr>
@@ -191,11 +191,11 @@
 
 				<tr>
 					<td>Rapportage</td>
-					<td width="30"></td>
+					<td width="30">7,0</td>
 					<td width="30"></td>
 					<td width="30"></td>
 					<td align="right">100%</td>
-					<td align="right"></td>
+					<td align="right">7,0</td>
 				</tr>
 		</table>
 
